# dsa

./: .gitignore  Cargo.toml  Makefile  README.md
conf/: config.toml
crates/dsa-agent/: Cargo.toml
crates/dsa-agent/src/: conversation.rs  intent.rs  lib.rs  memory.rs  orchestrator.rs
crates/dsa-agent/src/agents/: base_agent.rs  decision_agent.rs  intel_agent.rs  mod.rs  portfolio_agent.rs  react_executor.rs  risk_agent.rs  skill_agent.rs  strategy_agent.rs  technical_agent.rs
crates/dsa-agent/src/skills/: defaults.rs  mod.rs  router.rs
crates/dsa-agent/src/tools/: analysis_tools.rs  backtest_tools.rs  chip_tools.rs  data_tools.rs  history_tools.rs  market_tools.rs  mod.rs  pattern_tools.rs  portfolio_tools.rs  register_all.rs  registry.rs  search_tools.rs
crates/dsa-app/: Cargo.toml  tauri.conf.json
crates/dsa-app/capabilities/: default.json
crates/dsa-app/data/: dsa.db
crates/dsa-app/icons/: icon.icns
crates/dsa-app/src/: lib.rs  main.rs
crates/dsa-backtest/: Cargo.toml
crates/dsa-backtest/src/: engine.rs  lib.rs  report.rs  signal.rs
crates/dsa-core/: Cargo.toml
crates/dsa-core/src/: config.rs  errors.rs  lib.rs  utils.rs
crates/dsa-core/src/db/: helper.rs  migration.rs  mod.rs
crates/dsa-core/src/models/: analysis_report.rs  db.rs  decision_action.rs  mod.rs  stock.rs
crates/dsa-core/src/models/db/: agent_provider_turn.rs  alert_cooldown.rs  alert_notification.rs  alert_rule.rs  alert_trigger.rs  analysis_history.rs  backtest_result.rs  backtest_summary.rs  conversation_message.rs  conversation_summary.rs  decision_signal.rs  decision_signal_feedback.rs  decision_signal_outcome.rs  fundamental_snapshot.rs  intelligence_item.rs  intelligence_source.rs  llm_usage.rs  news_intel.rs  portfolio_account.rs  portfolio_cash_ledger.rs  portfolio_corporate_action.rs  portfolio_daily_snapshot.rs  portfolio_fx_rate.rs  portfolio_position.rs  portfolio_position_lot.rs  portfolio_trade.rs  schema_migration.rs  screening_result.rs  stock_daily.rs  stock_pool.rs  stock_quote.rs  watchlist_stock.rs
crates/dsa-pipeline/: Cargo.toml
crates/dsa-pipeline/src/: context_builder.rs  lib.rs  market_review.rs  pipeline.rs  prompt_templates.rs  report_renderer.rs  technical.rs
crates/dsa-server/: Cargo.toml
crates/dsa-server/src/: lib.rs  main.rs  router.rs  state.rs  strip_auth.rs
crates/dsa-server/src/handler/: agent.rs  alert.rs  alert_worker.rs  analysis.rs  analysis_stream.rs  auth.rs  backtest.rs  backtest_worker.rs  bot.rs  config_handler.rs  decision.rs  decision_extractor.rs  indicator.rs  intelligence.rs  market.rs  market_context.rs  mod.rs  name_resolver.rs  notification.rs  portfolio.rs  proxy.rs  report.rs  scheduler.rs  screening.rs  search.rs  social_sentiment.rs  stock.rs  stock_pool.rs  stream.rs  system.rs  task_progress.rs  usage.rs
crates/dsa-service/: Cargo.toml
crates/dsa-service/src/: alert.rs  alert_service.rs  alert_worker.rs  alert_worker_service.rs  analysis.rs  analysis_service.rs  auth.rs  auth_service.rs  backtest.rs  backtest_service.rs  config.rs  decision.rs  decision_extractor.rs  decision_extractor_service.rs  decision_service.rs  indicator.rs  intelligence.rs  intelligence_service.rs  lib.rs  market.rs  market_context.rs  market_context_service.rs  market_service.rs  name_resolver.rs  name_resolver_service.rs  notification.rs  notification_service.rs  portfolio.rs  portfolio_service.rs  report.rs  report_service.rs  scheduler.rs  scheduler_service.rs  screening.rs  screening_service.rs  search.rs  search_service.rs  social_sentiment.rs  social_sentiment_service.rs  stock.rs  (+6 more)
crates/dsa-service/src/bot/: commands.rs  dispatcher.rs  mod.rs  platforms.rs
data/: dsa.db
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  GETTING_STARTED.md
web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
web/src/: components.d.ts  env.d.ts  main.ts
web/src/api/: agent.ts  alert.ts  analysis.ts  auth.ts  backtest.ts  decision.ts  index.ts  indicator.ts  intelligence.ts  market.ts  notification.ts  portfolio.ts  scheduler.ts  screening.ts  search.ts  stock.ts  stockPool.ts  system.ts  usage.ts
web/src/components/common/: BottomStatusBar.vue  InitStockPoolDialog.vue  KlineChart.vue  MarkdownRenderer.vue  PositionCardList.vue  QuickStartCard.vue  ScoreGauge.vue  StockAutocomplete.vue
web/src/composables/: useAutoSync.ts  usePageVisibility.ts  useTradingInterval.ts  useUpdater.ts
web/src/layout/: AppHeader.vue  AppLayout.vue  SidebarNav.vue
web/src/router/: index.ts
web/src/stores/: analysis.ts  app.ts  auth.ts  chat.ts  task.ts
web/src/styles/: global.scss
web/src/utils/: format.ts  sse.ts  stock.ts
web/src/views/: AlertsView.vue  AnalysisHistoryView.vue  BacktestView.vue  ChatView.vue  DashboardView.vue  DecisionSignalsView.vue  GuideView.vue  KlineView.vue  LoginView.vue  PortfolioView.vue  ScreeningView.vue  SettingsView.vue  StockPoolView.vue  UsageView.vue  WatchlistView.vue
