[package]
name = "dsa-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "DSA agent strategy chat system"

[dependencies]
dsa-core = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

tube = { workspace = true }
ai-llm-kit = { workspace = true }
qta_crawler = { workspace = true }
reqwest = { workspace = true }
urlencoding = "2"
deck = { workspace = true }
deck_connector = { workspace = true }
deck_mysql = { path = "/Users/shaipe/workspace/rust/kit/deck/backend/mysql" }
