[package]
name = "dsa-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "DSA core data models, config and error definitions"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

tube = { workspace = true }
deck_model = { workspace = true }
deck_connector = { workspace = true }
deck = { workspace = true }

qta_crawler = { workspace = true }
