[package]
name = "dsa-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "DSA core data models, config and error definitions"

[features]
default = ["mysql", "sqlite"]
mysql = ["deck/mysql", "deck_mysql"]
sqlite = ["deck/sqlite", "deck_sqlite", "rusqlite"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

tube = { workspace = true }
deck_model = { workspace = true }
deck_connector = { workspace = true }
deck = { workspace = true }

rusqlite = { version = "0.37", features = ["bundled"], optional = true }
deck_mysql = { path = "/Users/shaipe/workspace/rust/kit/deck/backend/mysql", optional = true }
deck_sqlite = { path = "/Users/shaipe/workspace/rust/kit/deck/backend/sqlite", optional = true }

qta_crawler = { workspace = true }
